// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders borderless button 1`] = `
<button
  className="sc-bdVaJa hSmgSf"
  data-component="Button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`render renders secondary button 1`] = `
<button
  className="sc-bdVaJa gneWQO"
  data-component="Button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`render renders with large param 1`] = `
<button
  className="sc-bdVaJa PwUmn"
  data-component="Button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`render renders with small param 1`] = `
<button
  className="sc-bdVaJa kssjaf"
  data-component="Button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`render renders without crashing 1`] = `
<button
  className="sc-bdVaJa filjFa"
  data-component="Button"
>
  <span>
    Button
  </span>
</button>
`;
